--- a/npc copy.html
+++ b/npc copy.html
@@ -502,6 +502,11 @@
           Save
         </button>
       </div>
+      <footer>
+        <p>
+          Thank you for visiting! © 2023 v1.0
+        </p>
+      </footer>
     </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
