--- a/npc copy.html
+++ b/npc copy.html
@@ -504,7 +504,8 @@
       </div>
       <footer>
         <p>
-          Thank you for visiting! © 2023 v1.0
+          Thank you for visiting! © 2023 v1.0  
+          <a href="index.html">Home</a>
         </p>
       </footer>
     </div>
