--- a/index.html
+++ b/index.html
@@ -1,34 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOBBOT.COM 1.0</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="png" />
-    
-  </head>
-  <body>
-    <header>
-      <img src="img/hobbot-bar.png" alt="title bar logo" />
-    </header>
-    <nav>
-      <ul>
-        <li><a href="npc copy.html">DICE ROLL APP</a></li>
-        &nbsp; &nbsp; &nbsp;
-        <li><a href="mini photo.html">MY '59mini POROJECT PHOTOS</a></li>
-      </ul>
-    </nav>
-    <main>
-      <h1>DON'T PANIC 4.2-1</h1>
-      
-    </main>
-    <footer>
-      <p>
-        Thank you for visiting! © 2023 v1.0
-      </p>
-    </footer>
-
-
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; URL='https://hobbot.my-online.store/'" />
+    <title>Redirecting...</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="https://hobbot.my-online.store/">click here</a>.</p>
+</body>
 </html>
