--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://hobbot.my-online.store/'" />
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Website</title>
+    <style>
+        .iframe-container {
+            width: 100%;
+            height: 100vh;
+            border-top: 5px solid black; /* Change the color and thickness as needed */
+            border-bottom: 5px solid black; /* Change the color and thickness as needed */
+            box-sizing: border-box;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://hobbot.my-online.store/">click here</a>.</p>
+    <div class="iframe-container">
+        <iframe src="https://hobbot.my-online.store/"></iframe>
+    </div>
 </body>
 </html>
