--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://hobbot.my-online.store/'" />
+    <meta http-equiv="refresh" content="0; URL='https://hobbotinc.weebly.com/'" />
     <title>Redirecting...</title>
 </head>
 <body>
