--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://hobbotinc.weebly.com/'" />
+    <meta http-equiv="refresh" content="0; URL='https://hobbot.square.site/'" />
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://hobbotinc.weebly.com/">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://hobbot.square.site/">click here</a>.</p>
 </body>
 </html>
