--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://hobbot.square.site/'" />
-    <title>Redirecting...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to hobot.com</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+            background-color: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            margin: 0;
+        }
+        img {
+            width: 300px;
+            height: 300px;
+        }
+        h1 {
+            margin-top: 20px;
+            font-size: 2em;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://hobbot.square.site/">click here</a>.</p>
+    <img src="H_LOGO_ROTATE_SLOWER.gif" alt="Rotating H Logo">
+    <h1>Welcome to hobbot.com</h1>
+    <p>More coming soon!</p>
 </body>
 </html>
